# mcapi

./: CMakeLists.txt  README.md  endpoints.txt
include/: mcapi.h
src/: mcapi.c
